@@ -1,5 +1,10 @@
 2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>
 
+	* glib/Global.cs: implement Global.ApplicationName for localized
+	application name.
+
+2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>
+
 	* Makefile.am:
 	* glib/Format.cs: new class to map the g_format methods
 
